# playmobile-client

./: .editorconfig  .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  setup.cfg
playmobile/: __init__.py  abstract.py  client.py  entities.py  exceptions.py  test_utils.py
tests/: conftest.py  test_client.py  test_entities.py
